--- a/Angular Directives/n17-wait/test/test.html
+++ b/Angular Directives/n17-wait/test/test.html
@@ -1,14 +1,12 @@
-<html>
+<html ng-app="n17-wait">
 	<head>
 		<title>Atomic Core Test Page</title>
 		<link rel="stylesheet" href="../dist/atomic-core.css" type="text/css" />
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.1/angular.min.js"></script>
+		<script type="text/javascript" src="../dist/n17-wait.min.js"></script>
 	</head>
 
 	<body>
-		<div class="n17-wait-atomic-core">
-			<div class="inner one"></div>
-			<div class="inner two"></div>
-			<div class="inner three"></div>
-		</div>
+		<n17-atomic-core></n17-atomic-core>
 	</body>
 </html>
