First real commit of Wait Directive - using WebPack

--- a/test/test.html
+++ b/test/test.html
@@ -1,9 +1,8 @@
 <html ng-app="n17-wait">
 	<head>
 		<title>Atomic Core Test Page</title>
-		<link rel="stylesheet" href="../dist/atomic-core.css" type="text/css" />
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-rc.1/angular.min.js"></script>
-		<script type="text/javascript" src="../dist/n17-wait.min.js"></script>
+		<link rel="stylesheet" href="../dist/atomic-core.min.css" type="text/css" />
+		<script type="text/javascript" src="../dist/inc-frameworks/n17-wait.js"></script>
 	</head>
 
 	<body>
